# afids-validator

./: .dockerignore  .env.template  .gitignore  .gitmodules  .pre-commit-config.yaml  AFIDs_Validator_Aperture_Education.md  AFIDs_Validator_Aperture_Education_AT_FINAL.md  CONTRIBUTING.md  DEPLOY_HANDOFF.md  Dockerfile  Procfile  README.md  afids.py  afidsvalidator.ini  analyze_afids_templates.py  capture_screenshots.sh  compose.yml  compute.py  compute_reliability.py  config.py  controller.py  fabrictasks.py  generate_visualizations.py  make_figures.py  make_ga_assets.py  make_graphical_abstract.py  make_paper_doc.py  manage.py  model.py  model_auto.py  package.json  pyproject.toml  requirements.txt  setup.py  visualizations.py
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  auto_assign.yml  release-drafter.yml
.github/workflows/: afids-validator_ci.yml  afids-validator_release.yml  build-test.yml  deploy.yml  fidvalidor-ci-workflow.yml  herokudeploy-workflow.yml  release_mgmt.yml  review-workflow.yml  unittest-workflow.yml  version_bump.yml
afids-templates/human/: sub-Colin27_afids.fcsv  tpl-Agile12v2016_afids.fcsv  tpl-MNI2009cAsym_afids.fcsv
afidsvalidator/: __init__.py  config.py  landmark_info.py  learn.py  llm.py  model.py  orcid.py  rag.py  rater_reliability.json  reliability.py  views.py  visualizations.py  wsgi.py
afidsvalidator/.frontend-old/: package-lock.json  package.json
afidsvalidator/.frontend-old/src/components/: footer.tsx  navbar.tsx
afidsvalidator/.frontend-old/src/styles/: globals.css
afidsvalidator/afids-templates/human/: tpl-Agile12v2016_afids.fcsv  tpl-BigBrain_afids.fcsv  tpl-Colin27_afids.fcsv  tpl-MNI152Lin_afids.fcsv  tpl-MNI152NLin2009bAsym_afids.fcsv  tpl-MNI152NLin2009bSym_afids.fcsv  tpl-MNI152NLin2009cAsym_afids.fcsv  tpl-MNI152NLin2009cSym_afids.fcsv  tpl-MNI152NLin6Asym_afids.fcsv  tpl-MNI152NLin6Sym_afids.fcsv  tpl-MNI305_afids.fcsv  tpl-OASIS30ANTs_afids.fcsv  tpl-PD25_afids.fcsv  tpl-fsaverage_afids.fcsv
afidsvalidator/afids-templates/macaca/: tpl-D99_afids.fcsv  tpl-INIA19_afids.fcsv  tpl-MacaqueMNI_afids.fcsv  tpl-NMTv1.3_afids.fcsv  tpl-NMTv2.0asym_afids.fcsv  tpl-Yerkes19_afids.fcsv
afidsvalidator/frontend/: package-lock.json  package.json
afidsvalidator/frontend/src/components/: navbar.tsx
afidsvalidator/frontend/src/pages/: _app.tsx  contact.tsx  index.tsx
afidsvalidator/frontend/src/styles/: Home.module.css  globals.css
afidsvalidator/static/css/: afids_custom.css
afidsvalidator/static/lib/afidsvalidator-react/: .prettierrc  package-lock.json  package.json
afidsvalidator/static/lib/afidsvalidator-react/src/: index.ts
afidsvalidator/static/lib/afidsvalidator-react/src/components/: Footer.tsx  NavBar.tsx  footer.tsx  navbar.tsx
afidsvalidator/static/lib/afidsvalidator-react/styles/: afids_custom.css
afidsvalidator/templates/: app.html  base.html  contact.html  db.html  index.html  learn.html  login.html  view_analytics.html
compose/: nginx.conf
fidvalidator/: compute.py  compute_auto.py  controller.py  model_auto.py
fidvalidator/templates/: view.html
home/fidvalidator/: compute.py  compute_auto.py  controller.py  model_auto.py
home/fidvalidator/templates/: view.html  view_plain2.html
migrations/versions/: 11230bf660dc_.py  3c0e2e6006c4_.py  56d89145adbb_.py  732bf2951eb5_.py  7af552f992f7_.py  7b4e00130929_.py  README.md  a0928ce2eee6_.py  c4e7f1a9b2d8_.py  d0a243e71ea2_.py  eef891c5c783_.py
static/css/: afids_custom.css  milligram.min.css
templates/: base.html  contact.html  db.html  index.html  login.html  pointcloud.html  results.html  template.html  validator.html  view.html  view_analytics.html  view_orig.html
test/: __init__.py  test_afids.py  test_model.py  test_model_auto.py  test_templates.py
test/resources/: incorrect_desc.fcsv  incorrect_desc.json  infinite_coord.fcsv  infinite_coord.json  invalid_content.fcsv  invalid_content.json  invalid_content_valid_header.fcsv  invalid_coord.fcsv  invalid_coord.json  invalid_version.fcsv  missing_row_10.fcsv  missing_row_10.json  too_few_columns.fcsv  too_few_coords.json  too_few_rows.fcsv  too_few_rows.json  too_many_columns.fcsv  too_many_rows.fcsv  too_many_rows.json  valid.fcsv  valid.json  valid_flip.fcsv  valid_flip.json  valid_misordered.json  valid_nhp.fcsv  valid_nhp.json
var/www/: fidvalidator_pythonanywhere_com_wsgi.py
